# my-tools

./: .gitignore  README.md  add.py  tool1.py  tools.txt
screen_translator_pro/: .gitignore  CLEANUP_SUMMARY.md  GPU_ACCELERATION_OPTIMIZATION_SUMMARY.md  README.md  VISION_OCR_GUIDE.md  VISION_OCR_SUMMARY.md  config.yaml  config_wizard.py  install.cmd  main.py  performance_benchmark.py  quick_test.py  requirements.txt  start_deepseek_translator.bat  test_debug.py  test_deepseek_translator.py  最终部署和使用指南.md
screen_translator_pro/data/: translation_cache.db
screen_translator_pro/engines/capture/: smart_capture.py
screen_translator_pro/engines/ocr/: deepseek_local_ocr.py  deepseek_ocr_translator.py  deepseek_vision_ocr.py  hybrid_ocr.py  qwen_vision_ocr.py  vision_ocr.py
screen_translator_pro/engines/translation/: base_translator.py  model_router.py
screen_translator_pro/ui/: main_window.py  smart_sidebar.py
screen_translator_pro/utils/: windows_tools.py
smallpangu_v4.0/: .gitignore  LICENSE  README.md  STATUS_REPORT.md  launch_ui.py  pyproject.toml  requirements.txt  run_simple_test.py  start_app.py  test_app_integration.py  test_config_ascii.py  test_config_interface.py  test_config_simple.py  test_config_system.py  test_full_integration.py  test_monitor_interface.py  test_plugin_discovery.py  test_ui_display.py  test_ui_framework.py  test_ui_functionality.py  test_view_switching.py  test_window_size.py  verify_system.py
smallpangu_v4.0/configs/: base.yaml  development.yaml
smallpangu_v4.0/plugins/: __init__.py
smallpangu_v4.0/plugins/tools/: __init__.py  token_counter.py
smallpangu_v4.0/src/smallpangu/: __init__.py  __main__.py  app.py
smallpangu_v4.0/src/smallpangu/config/: __init__.py  admin.py  loader.py  manager.py  models.py
smallpangu_v4.0/src/smallpangu/core/: __init__.py  di.py  errors.py  events.py  logging.py
smallpangu_v4.0/src/smallpangu/plugins/: __init__.py  base.py  loader.py  registry.py
smallpangu_v4.0/src/smallpangu/services/: __init__.py  admin_state_service.py  config_form_service.py  hot_reload_orchestrator.py  module_registry.py
smallpangu_v4.0/src/smallpangu/ui/: __init__.py  admin_interface.py  chat_interface.py  config_form_view.py  config_interface.py  help_interface.py  i18n.py  manager.py  monitor_interface.py  plugin_interface.py  settings_interface.py  theme.py  widgets.py  window.py
text_processor_v2/: README.md  main.py  艾气论_20260119_002201.docx  艾气论_20260119_002435.docx
text_processor_v2/config/: __init__.py  config.ini  manager.py  model_configs.json
text_processor_v2/core/: api_client.py  document_processor.py  long_document_processor.py  model_manager.py  template_manager.py
text_processor_v2/templates/: academic.json  article.json  book_chapter.json  official.json  report.json  simple.json
text_processor_v2/ui/: main_window.py
小盘古3.0_Pro/: README.md  pyproject.toml  仪表盘.md  新窗口交接文档_20250204_v2.md
小盘古3.0_Pro/data/trust/: trust_history.json
小盘古3.0_Pro/src/: seed_v0_1_1.py
小盘古3.0_Pro/src/config/: system_config.py
小盘古3.0_Pro/src/core/: trust_system_core.py
小盘古3.0_Pro/src/evolution/: proposal_gen.py
小盘古3.0_Pro/src/utils/: logger.py  time_machine.py
小盘古3.0_Pro/tests/: test_trust_system_compatibility.py
小盘古3.0_Pro/新建文件夹/: 项目交接文档_v3.0pro_参考版.md
小盘古3.0_Pro阶段1/src/: seed_v0.1.py
小盘古3.0_Pro阶段1/tests/: test_seed_basic.py  test_trust_system.py
小盘古3.0_Pro阶段1/新建文件夹/: 窗口转换交接模板_v1.0.md
小盘古3.0_Pro阶段2/: PROGRESS_SUMMARY.md  create_snapshot.py  demo_evolution_proposal.py  diagnostic_ascii.py  diagnostic_guardian.py  module_import_test.py  requirements.txt  test_checksum_issue.py  test_guardian_safe.py  模块化能力验证总结.md  状态仪表盘.md  记忆系统测试总结.md  阶段二启动总结.md  阶段二宪法审查报告.md
小盘古3.0_Pro阶段2/01_项目司令部/: 总纲宪章.md  记忆索引.json
小盘古3.0_Pro阶段2/05_测试验证/: test_seed_basic.py  test_trust_system.py  test_trust_system_compatibility.py
小盘古3.0_Pro阶段3/: .gitignore  create_snapshot.py  demo_phase3_integration.py  demo_supervision_workflow.py  manual_snapshot.py  test_death_switch_integration.py  test_guardian_fixed.py  test_guardian_safe_single.py  test_guardian_simple.py  test_import_verification.py  test_memory_safe.py  test_memory_system.py  test_modular_integration.py  交接总结_新窗口快速参考.md  命令行操作指南_用户感知版.md  小盘古架构设计方案（建议版）.md  快速上手指南_新窗口必读.md  新AI快速启动指南.md  新窗口交接文档.md  系统功能清单与基因吸收状态.md  统一交接文档_完整版.md  统一交接文档模板.md  阶段三第5次自主优化总结.md  阶段二完成总结.md  阶段二当前进展总结.md  阶段二用户监督机制实施总结.md  阶段二用户监督机制部署完成报告.md  阶段二用户监督机制部署审批请求.md  阶段二用户监督机制部署批准确认.md
小盘古3.0_Pro阶段3/01_项目司令部/: 多AI窗口协作框架.md  当前阶段状态.json  记忆索引.json  阶段三任务规划.md  阶段三任务规划_修订版.md  阶段三智能协作实践测试设计.md  阶段二用户监督任务协作机制设计.md  阶段四有益协作能力前移实施方案.md
小盘古3.0_Pro阶段3/02_锚点核心库/: 基因触发极简指南.md
小盘古3.0_Pro阶段3/05_测试验证/: test_consensus_decision_integration.py  test_event_integration.py  test_intent_recognizer.py  test_natural_division_integration.py  test_seed_basic.py  test_supervision_integration.py  test_trust_system.py
小盘古3.0_Pro阶段3/src/: __init__.py
智能排版dify连接版/: .gitignore  README.md  main.py  requirements.txt  run.bat  test_day2.py  test_day3_dialogs.py
智能排版dify连接版/config/: manager.py  model_configs.json  prompt_config.json
智能排版dify连接版/core/: api_client.py  dify_client_final.py  document_processor.py  prompt_manager.py  template_manager.py
智能排版dify连接版/templates/: article.json  book_chapter.json  灸道探微专用.json
智能排版dify连接版/ui/: __init__.py  main_window.py
智能排版dify连接版/utils/: text_analyzer.py  title_extractor.py
(+92 files in other folders)
